--- a/rainning-trigger/pom.xml
+++ b/rainning-trigger/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>base-station</artifactId>
+    <artifactId>rainning-trigger</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -71,7 +71,6 @@
             <version>4.8.115</version>
         </dependency>
 
+
     </dependencies>
-
-
 </project>
